--- a/requirements.txt
+++ b/requirements.txt
@@ -54,7 +54,7 @@ toml==0.10.2
 toolz==0.12.0
 tornado==6.3.3
 tqdm==4.66.1
-typing_extensions==4.7.1
+typing_extensions
 tzdata==2023.3
 tzlocal==4.3.1
 urllib3==2.0.7
