Add production deployment and security hardening

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,63 @@
-API_KEY=change-me-local-only
-OPENAI_API_KEY=
-OPENAI_MODEL=gpt-5-nano
+# ===========================================
+# LLM Chess Coach - Environment Configuration
+# ===========================================
+
+# Environment (development|production)
+ENVIRONMENT=development
+
+# ===========================================
+# Authentication & Security
+# ===========================================
+
+# API Key for bearer token authentication (REQUIRED in production)
+# Generate a secure random key: openssl rand -hex 32
+API_KEY=your-secure-api-key-here
+
+# Allowed CORS origins (comma-separated, or * for all)
+# In production, specify your domain(s)
+ALLOWED_ORIGINS=https://your-domain.com,https://www.your-domain.com
+
+# ===========================================
+# OpenAI API Configuration
+# ===========================================
+
+# OpenAI API Key (REQUIRED for LLM coaching features)
+OPENAI_API_KEY=your-openai-api-key-here
+
+# OpenAI Model (default: gpt-4)
+OPENAI_MODEL=gpt-4
+
+# Optional: Custom OpenAI API endpoint
+# OPENAI_API_ENDPOINT=https://api.openai.com/v1
+
+# ===========================================
+# Stockfish Configuration
+# ===========================================
+
+# Path to Stockfish binary
+# Ubuntu/Debian: /usr/games/stockfish
+# Homebrew macOS: /opt/homebrew/bin/stockfish
 STOCKFISH_PATH=stockfish
-LICHESS_API_TOKEN=
+
+# Multi-PV analysis (number of principal variations)
+MULTIPV=5
+
+# Nodes per principal variation (higher = more accurate, slower)
+NODES_PER_PV=1000000
+
+# ===========================================
+# Application Configuration
+# ===========================================
+
+# Logging level (DEBUG|INFO|WARNING|ERROR)
+LOG_LEVEL=INFO
+
+# Number of Gunicorn workers (default: CPU count * 2 + 1)
+# GUNICORN_WORKERS=4
+
+# ===========================================
+# Optional: Lichess Integration
+# ===========================================
+
+# Lichess API token for fetching games
+# LICHESS_API_TOKEN=your-lichess-token-here
