--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,56 @@
+# Environment and secrets
 .env
+.env.local
+.env.production
+*.key
+*.pem
+*.crt
+
+# Data directories
 games/
 samples/
+
+# Configuration files (with sensitive data)
 config.json
+schedules.json
+
+# Python
 __pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+*.so
+*.egg
+*.egg-info/
+dist/
+build/
+.pytest_cache/
+
+# Virtual environments
 chess-coach-venv/
+venv/
+env/
+ENV/
+
+# Logs
+logs/
+*.log
+*.log.*
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Process files
+*.pid
+*.sock
+
+# Backup files
+*.bak
+*.backup
+*.old
