--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 chess==1.10.0
 fastapi==0.109.2
-uvicorn==0.25.0
+uvicorn[standard]==0.25.0
 requests==2.31.0
 python-multipart==0.0.9
 openai>=1.0.0
 python-dotenv==1.0.1
-python-multipart==0.0.9
+gunicorn==21.2.0
+slowapi==0.1.9
+python-json-logger==2.0.7
