--- a/.env.example
+++ b/.env.example
@@ -25,10 +25,10 @@ ALLOWED_ORIGINS=https://your-domain.com,https://www.your-domain.com
 OPENAI_API_KEY=your-openai-api-key-here
 
 # OpenAI Model (default: gpt-4)
-OPENAI_MODEL=gpt-4
+OPENAI_MODEL=google/gemini-2.5-flash-lite
 
 # Optional: Custom OpenAI API endpoint
-# OPENAI_API_ENDPOINT=https://api.openai.com/v1
+OPENAI_API_ENDPOINT=https://openrouter.ai/api/v1
 
 # ===========================================
 # Stockfish Configuration
