Solve multi-worker session persistence issue

--- a/.env.example
+++ b/.env.example
@@ -56,6 +56,16 @@ LOG_LEVEL=INFO
 # GUNICORN_WORKERS=4
 
 # ===========================================
+# Redis Configuration (Session Storage)
+# ===========================================
+
+# Redis URL for session storage (REQUIRED for multi-worker deployments)
+# Local development: redis://localhost:6379/0
+# Heroku: Automatically set by Heroku Redis add-on
+# If not set, falls back to in-memory storage (single worker only)
+# REDIS_URL=redis://localhost:6379/0
+
+# ===========================================
 # Optional: Lichess Integration
 # ===========================================
 
