--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,6 @@ slowapi==0.1.9
 # Logging
 python-json-logger==2.0.7
 
-# Optional: Redis for caching (uncomment if using Redis add-on)
-# redis==5.0.1
-# hiredis==2.3.2
+# Redis for session storage (required for multi-worker deployments)
+redis==5.0.1
+hiredis==2.3.2
